--- a/style.css
+++ b/style.css
@@ -5,14 +5,32 @@
     display: flex;
     flex-wrap: wrap;
     align-content: center;
+    font-family: Roboto, serif;
+    justify-content: space-between; 
 }
-.nav *{
+.nav-links{
+
     display: flex;
+    list-style-type: none;
+    align-items: center;
     margin: 0px;
+    padding: 0px;
 }
-h1{
-    align-items: center;
+.nav-links > li {
+    margin: 5px;
 }
-ul{
-    align-items: center;
+a:link{
+    text-decoration: none;
+    color: white;
+}
+.nav-title{
+    color: aliceblue;
+}
+button{
+    border: 2px solid black;
+    background-color: darkcyan;
+    color: white;
+    width: 110px;
+    height: 35px;
+    box-shadow: 5px 5px black;
 }
